# web-agentic

./: .gitignore  CLAUDE.md  README.ko.md  README.md  SETUP_LINUX.md  pyproject.toml
agents/: AGENTS.md  developer.md  operator.md  planner.md  reviewer.md  tester.md
authoring-ui/: index.html  package-lock.json  package.json
authoring-ui/src/: App.tsx
config/: settings.yaml  synonyms.yaml
config/rules/: error_detection.yaml  filter_sort.yaml  login_detection.yaml  pagination.yaml  popup_common.yaml  sort_popular.yaml
config/workflows/: naver_shopping.yaml
doc/: stagehand_chrome_automation_blueprint.md
docs/: API-REFERENCE.ko.md  API-REFERENCE.md  ARCHITECTURE.md  COMPARISON-web-testing-vs-web-agentic.md  DESIGN.md  DEV_GUIDE.md  EVOLUTION-ENGINE.ko.md  EVOLUTION-ENGINE.md  IMPLEMENTATION-REPORT.md  PRD.md  RECON_CODEGEN_ARCHITECTURE.md  TESTING-GUIDE.ko.md  TESTING-GUIDE.md  V2_ROADMAP.md  new_arch.md  web-automation-technical-spec-v2.md
docs/plans/: 2026-02-21-authoring-ui-design.md  2026-02-21-llm-settings-design.md  2026-02-21-phase1-deterministic-core.md  2026-02-21-phase2-5-full-implementation.md  2026-02-24-llm-first-e2e-design.md  2026-02-24-llm-first-implementation.md  2026-02-26-danawa-e2e-iterative-fix-design.md  2026-03-01-site-knowledge-visual-judge-design.md  2026-03-01-site-knowledge-visual-judge.md
evolution-ui/: README.ko.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
evolution-ui/src/: App.tsx  api.ts
examples/chat-automation/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
node-runtime/: package.json  pnpm-lock.yaml  tsconfig.json
node-runtime/e2e/: run-integration.ts  run-pipeline.ts
python-authoring-service/: pyproject.toml
python-authoring-service/app/: llm_config.py  main.py
python-authoring-service/app/api/: compile_intent.py  llm_settings.py  optimize_profile.py  plan_patch.py  profiles.py  run_recipe.py
python-authoring-service/app/dspy_programs/: intent_to_policy.py  intent_to_workflow.py  patch_planner.py  signatures.py
python-authoring-service/app/gepa/: eval_harness.py  optimizer.py  scoring.py
python-authoring-service/app/schemas/: patch_schema.py  recipe_schema.py
python-authoring-service/app/services/: patch_generator.py  patch_validator.py
python-authoring-service/app/storage/: profiles_repo.py  task_specs_repo.py
python-authoring-service/data/profiles/: profile-1.json  profile-1_v1.json  profile-1_v2.json  profile-1_v3.json  profile-1_v4.json  profile-1_v5.json
python-authoring-service/data/task_specs/: 72fb6a8c-a0b3-4da2-a69e-d2892709d38c.json  fa60b542-38ad-4893-ba3e-69d0483c4197.json
python-authoring-service/tests/: test_api.py  test_dspy_programs.py  test_dspy_real.py  test_eval_harness.py  test_gepa.py  test_patch_generator.py  test_patch_validator.py  test_scoring.py  test_storage.py  test_storage_real.py
scripts/: benchmark.py  capture_dom.py  run_live.py  run_poc.py  run_scenarios.py  scenario_reporter.py  scenario_types.py  setup.sh  start_server.py
src/: __init__.py  web_agent.py
src/ai/: __init__.py  candidate_filter.py  cascaded_router.py  context_reducer.py  llm_planner.py  llm_provider.py  model_registry.py  patch_system.py  prompt_manager.py  vector_ranker.py
src/api/: __init__.py  chat_automation.py  dependencies.py  main.py  models.py  progress_adapter.py  session_db.py  session_manager.py
src/codegen/: __init__.py  agent.py  (+4 more)
(+423 files in other folders)
