[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[project]
name = "web-agentic"
version = "0.1.0"
description = "Adaptive web automation engine — fewer LLM calls with repeated execution"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.50",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "google-genai>=1.0",
    "pillow>=12.0",
    "pydantic>=2.10",
    "snowballstemmer>=3.0",
    "imagehash>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9",
    "mypy>=1.15",
    "httpx>=0.28",
]
openai = [
    "openai>=1.0",
]
vision = [
    "ultralytics>=8.2",
    "opencv-python>=4.9",
]
nlp = [
    "mecab-python3>=1.0",
    "fugashi>=1.5",
    "jieba>=0.42",
]
embeddings = [
    "fastembed>=0.3",
    "hnswlib>=0.8",
]
observability = [
    "langfuse>=2.0",
]
learning = [
    "dspy>=2.5",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "httpx>=0.28",
]
v4 = [
    "litellm>=1.0",
    "langgraph>=0.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests requiring a real browser",
    "live: Tests against live websites (requires RUN_LIVE_TESTS=1)",
]
